--- a/templates/renter/booking_details.html
+++ b/templates/renter/booking_details.html
@@ -112,7 +112,7 @@
                                                 <table class="table table-bordered table-striped text-center align-middle detail-table">
                                                     <tr>
                                                         <th class="align-middle" style="width: 40%">Họ và tên:</th>
-                                                        <td class="align-middle">{{ booking.renter.full_name }}</td>
+                                                        <td class="align-middle">{{ booking.renter.display_name }}</td>
                                                     </tr>
                                                     <tr>
                                                         <th class="align-middle">Email:</th>
